After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 762111 - vaapisink: Fix capsfeature memory leak
vaapisink: Fix capsfeature memory leak
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer-vaapi
git master
Other Linux
: Normal normal
: 1.7.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-02-15 23:16 UTC by Vineeth
Modified: 2016-02-16 13:13 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix caps feature memory leak (1.32 KB, patch)
2016-02-15 23:17 UTC, Vineeth
committed Details | Review

Description Vineeth 2016-02-15 23:16:38 UTC
Fix for below memory leak

==27189== 660 (176 direct, 484 indirect) bytes in 11 blocks are definitely lost in loss record 3,940 of 3,991
==27189==    at 0x402C17C: malloc (in /usr/lib/valgrind/vgpreload_memcheck-x86-linux.so)
==27189==    by 0x421FBE2: g_malloc (in /lib/i386-linux-gnu/libglib-2.0.so.0.4002.0)
==27189==    by 0x4236281: g_slice_alloc (in /lib/i386-linux-gnu/libglib-2.0.so.0.4002.0)
==27189==    by 0x4075B1B: gst_caps_features_new_empty (gstcapsfeatures.c:165)
==27189==    by 0x40766F2: gst_caps_features_new_valist (gstcapsfeatures.c:249)
==27189==    by 0x4076776: gst_caps_features_new (gstcapsfeatures.c:223)
==27189==    by 0x7E234BB: gst_vaapisink_get_caps_impl (gstvaapisink.c:1215)
==27189==    by 0x7E234BB: gst_vaapisink_get_caps (gstvaapisink.c:1245)
==27189==    by 0x627AA82: gst_base_sink_query_caps (gstbasesink.c:581)
==27189==    by 0x6281733: gst_base_sink_default_query (gstbasesink.c:4961)
==27189==    by 0x7E24805: gst_vaapisink_query (gstvaapisink.c:1481)
==27189==    by 0x6276861: gst_base_sink_sink_query (gstbasesink.c:5015)
==27189==    by 0x40A9F99: gst_pad_query (gstpad.c:3900)
Comment 1 Vineeth 2016-02-15 23:17:57 UTC
Created attachment 321327 [details] [review]
fix caps feature memory leak
Comment 2 Sebastian Dröge (slomo) 2016-02-16 13:12:38 UTC
commit b54ac96c2791f3744616395ddef8d2e3b6428a7f
Author: Vineeth TM <vineeth.tm@samsung.com>
Date:   Tue Feb 16 08:15:40 2016 +0900

    vaapisink: Fix capsfeature memory leak
    
    caps feature allocated is not being freeing in some cases
    
    https://bugzilla.gnome.org/show_bug.cgi?id=762111