vaapisink: Fix capsfeature memory leak

caps feature allocated is not being freeing in some cases

https://bugzilla.gnome.org/show_bug.cgi?id=762111